fix(NavDrawer): fix nav drawer border color on dark mode

--- a/packages/themes/src/morpheme/_nav-drawer.dark.scss
+++ b/packages/themes/src/morpheme/_nav-drawer.dark.scss
@@ -2,6 +2,7 @@
   .nav-drawer {
     --nav-drawer-bg-color: var(--color-gray-true-800);
     --nav-drawer-text-color: var(--color-gray-true-200);
+    --nav-drawer-border-color: var(--color-gray-true-700);
 
     /* variants */
     &-default {
